Trying to solve a layout problem. Problem: When I opened the site on my cellphone, and tried to write something in the search bar, the result container overlayed the input bar

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body{
     background-size: cover;
 }
     #content-container{
-        position: absolute;
+        position: fixed;
         top: 10%;
         left: 50%;
         transform: translate(-50%, -10%);
@@ -48,8 +48,10 @@ body{
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        /**/
+        gap: 30px;
         width: 90%;
-        height: 55%;
+        height: max-content;
         /**/
         text-align: center;
     }
